COP-22768: updated snapshot cleanup logic to properly initialize bookmark map